# BigDL-core

bigdl-core-xe/: setup.py
bigdl-core-xe/bigdl-core-xe-addons/: setup.py  xpu_addon_ops.cpp
bigdl-core-xe/bigdl-core-xe-addons/includes/: norm.h
llm/: build.sh  setup.py
llm/bigdl-core-xe-addons/: CMakeLists.txt  README.md  bigdl_core_llm.cpp  build.sh  norm.cpp  setup.py
llm/bigdl-core-xe-addons/includes/: utils.h
ppml/src/main/cpp/: com_intel_analytics_bigdl_ppml_dcap_Attestation.h  quote_verification.cpp  tdx_quote_generation.cpp
ppml/src/main/java/com/intel/analytics/bigdl/ppml/dcap/: Attestation.java
ppml/src/test/java/com/intel/analytics/bigdl/ppml/dcap/: AttestationTest.java
